# Aquilia

./: .env.example  .gitignore  AUTH_DASHBOARD_COMPLETE.md  CODEBASE-AUDIT.md  COMPLETION_CHECKLIST.md  Django_ORM_Minimal.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PATCHES-INDEX.md  PERFORMANCE_AUDIT.md  QUICKSTART.md  README.md  REQUEST_IMPLEMENTATION_SUMMARY.md  REQUEST_QUICKREF.md  REQUEST_RESPONSE_INTEGRATION_PLAN.md  REQUEST_RESPONSE_INTEGRATION_SUMMARY.md  REQUEST_RESPONSE_QUICKREF.md  SESSION_IMPLEMENTATION_SUMMARY.md  SESSION_ROUTES_GUIDE.md  UNIQUE_SESSION_SYNTAX_COMPLETE.md  WEBSOCKETS_INTEGRATION_REPORT.md  WEBSOCKETS_TEST_REPORT.md  _aquilia_landing.py  aquilary_poc.py  demo_v2_enhancements.py  di_poc.py  docker-compose.test.yml  main.py  p.html  poc.py  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt  setup.py  test.py  test_advanced_auth.py  test_auth_integration.py  (+22 more)
Authentication/: Dockerfile  README.md  db.sqlite3  docker-compose.yml  workspace.py
aqdocx/: build_output.txt  index.html  package-lock.json  package.json
aquilia/: __init__.py  _datastructures.py  _uploads.py  asgi.py  config.py  config_builders.py  effects.py  engine.py  flow.py  lifecycle.py  manifest.py  middleware.py  request.py  response.py  server.py
artifacts/: templates.crous
benchmark/: README.md  endpoints_discovery.md  final_report.md  results.csv  seed_db.py
benchmarks/: bench_di.py  bench_hotpaths.py  bench_hotpaths_v2.py  bench_models.py  local_bench_app.py  perf_smoke.py
di_audit/: AUDIT_REPORT.md  REGRESSION_CHECKLIST.md  ROADMAP.md  audit_di.py  report.json
docs/: API.md  AQUILARY.md  AQUILATE_DESIGN.md  AQUILATE_IMPLEMENTATION.md  AQUILATE_QUICKSTART.md  AQUILAUTH_DEEP_INTEGRATION.md  AQUILAUTH_DESIGN.md  AQUILAUTH_IMPLEMENTATION_SUMMARY.md  AQUILAUTH_INTEGRATION_ARCHITECTURE.md  AQUILAUTH_README.md  AQUILAUTH_STATUS.md  AQUILA_FAULTS.md  AQUILA_FAULTS_IMPLEMENTATION.md  AQUILA_FAULTS_PHASE2.md  AQUILA_FAULTS_QUICKSTART.md  (+39 more)
(+1162 files in other folders)
